# dots

./: .bashrc  .gitignore  .hyper.js  .vimrc  .zshrc  Makefile  README.md  install.sh  pyproject.toml
cli/: Makefile  j  j-dc  j-example  j-update  j-uuid
dotfiles/: .bashrc  .vimrc  .zshrc
others/: iterm-profile.json  slack-theme.md
scripts/vscode-install/: install.py  install.sh
