[project]
dependencies = []
requires-python = ">=3.9"
dynamic = ["classifiers"]

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
clean = ["yapf~=0.31"]

[tool.yapf]
column_limit = 120
dedent_closing_brackets = true
indent_dictionary_value = true
allow_split_before_dict_value = false
