[tool.poetry]
name = "dots"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
column_limit = 120
dedent_closing_brackets = true
indent_dictionary_value = true
allow_split_before_dict_value = false
